--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -22,7 +22,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=laravel
+# DB_DATABASE=
 # DB_USERNAME=root
 # DB_PASSWORD=
 
@@ -62,3 +62,11 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+REPLICADO_HOST=
+REPLICADO_PORT=
+REPLICADO_DATABASE=
+REPLICADO_USERNAME=
+REPLICADO_PASSWORD=
+REPLICADO_CODUNDCLG=
+REPLICADO_CODUNDCLGS=
