--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^8.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
+        "laravel/ui": "^4.5",
+        "uspdev/laravel-usp-faker": "^1.0",
         "uspdev/laravel-usp-theme": "^2.8"
     },
     "require-dev": {
