--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/ui": "^4.5",
         "uspdev/laravel-usp-faker": "^1.0",
         "uspdev/laravel-usp-theme": "^2.8",
+        "uspdev/replicado": "^1.24",
         "uspdev/senhaunica-socialite": "^4.3"
     },
     "require-dev": {
