--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/ui": "^4.5",
         "uspdev/laravel-usp-faker": "^1.0",
         "uspdev/laravel-usp-theme": "^2.8",
+        "uspdev/laravel-usp-validators": "^1.0",
         "uspdev/replicado": "^1.24",
         "uspdev/senhaunica-socialite": "^4.3"
     },
